<resources>
    <string name="app_name">Skånetrafiken</string>

    <string name="action_settings">Settings</string>
    <string name="skanetrafiken">Skånetrafiken</string>
    <string name="sok">Reseplanerare</string>
    <string name="kalender">Tidtabeller</string>
    <string name="klocka">Hållplatssök</string>
    <string name="biljett">Biljetter</string>
    <string name="fran">Från</string>
    <string name="till">Till</string>
    <string name="tid">Tidpunkt</string>
    <string name="trafikslag">Trafikslag</string>
    <string name="now">Just Nu</string>
    <string name="avgang">Avgång</string>
    <string name="ankomst">Ankomst</string>
    <string name="bevakningar">Bevakningar</string>
    <string name="favoriter">Favoriter</string>

    <string-array name="hour">
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="minute">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>

    <string-array name="trafikslag">
        <item>Buss</item>
        <item>Tåg</item>
        <item>Spårvagn</item>
        <item>Gång</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
