<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:id="@+id/start">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_sok"
            android:src="@drawable/sok"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="66dp"
            android:layout_marginRight="66dp"
            android:clickable="true"
            android:background="#ffff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9b000000"
            android:text="@string/sok"
            android:id="@+id/text_sok"
            android:layout_below="@+id/img_sok"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_klocka"
            android:src="@drawable/klocka"
            android:background="#ffff"
            android:layout_below="@+id/img_sok"
            android:layout_alignStart="@+id/img_sok"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="66dp"
            android:layout_marginRight="66dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9b000000"
            android:text="@string/klocka"
            android:id="@+id/text_klocka"
            android:layout_below="@+id/img_klocka"
            android:layout_alignStart="@+id/img_klocka"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_kalender"
            android:src="@drawable/kalender"
            android:background="#ffff"
            android:layout_alignBottom="@+id/img_sok"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="66dp"
            android:layout_marginRight="66dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9b000000"
            android:text="@string/kalender"
            android:id="@+id/text_kalender"
            android:layout_below="@+id/img_kalender"
            android:layout_alignEnd="@+id/img_kalender"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_biljett"
            android:src="@drawable/biljett"
            android:background="#ffff"
            android:layout_alignTop="@+id/img_klocka"
            android:layout_alignEnd="@+id/img_kalender"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="66dp"
            android:layout_marginRight="66dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9b000000"
            android:text="@string/biljett"
            android:id="@+id/text_biljett"
            android:layout_below="@+id/img_biljett"
            android:layout_alignStart="@+id/img_biljett"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>