<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:id="@+id/planner">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fran"
                    android:id="@+id/textFran"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#9b000000"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextFran" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/till"
                    android:id="@+id/textTill"
                    android:paddingLeft="16dp"
                    android:textColor="#9b000000"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextTill" />

            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:layout_height="40dp"
            android:src="@drawable/shuffle"
            android:scaleType="centerInside"
            android:clickable="true"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#ffdf000d"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/Tidpunkt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tid"
                android:textColor="#9b000000"
                android:textSize="20dp"
 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/hour"
                    android:layout_gravity="center_vertical"></Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/minute"
                    android:layout_gravity="center_vertical"></Spinner>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/heart"/>

        </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/Trafikslag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trafikslag"

            android:textColor="#9b000000"
            android:textSize="20dp"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/trafikslag"
                android:layout_gravity="center_vertical"></Spinner>

        </LinearLayout>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Avgång"
            android:textOn="ankomst"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/heart"/>


    </LinearLayout>

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#ffdf000d"/>

</LinearLayout>